--- a/Island Escape/Assets/_Game/UI/Main menu/Main menu.uxml
+++ b/Island Escape/Assets/_Game/UI/Main menu/Main menu.uxml
@@ -11,6 +11,7 @@
         </ui:VisualElement>
         <ui:VisualElement name="windows-zone" style="flex-grow: 1; height: 100%; width: 85%;">
             <ui:VisualElement name="lobby-winodow" class="my-grid" style="flex-grow: 1; display: flex; padding-top: 12%; padding-right: 12%; padding-bottom: 12%; padding-left: 12%; width: 100%; height: 100%; position: absolute;">
+                <ui:TextField placeholder-text="Enter nickname" name="nickname-text-field" value="Player" />
                 <ui:VisualElement name="lobby-window-root" class="my-grid" style="flex-grow: 1; background-color: rgb(128, 128, 128);">
                     <ui:Label text="Traits:" name="traits" />
                     <ui:Label text="Skills:" name="skills" />
